--- a/src/client/scss/base/_base.scss
+++ b/src/client/scss/base/_base.scss
@@ -5,8 +5,7 @@ html {
 }
 
 body {
-  background-color: $primary;
-  color: $white;
+  color: $dark;
   font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   line-height: 1.5;
 
