--- a/src/client/scss/component/_c-button.scss
+++ b/src/client/scss/component/_c-button.scss
@@ -1,19 +1,31 @@
 @use "../configuration" as *;
 
 .c-button {
-  border-radius: 0.5rem;
-  padding: 0.5rem;
   display: block;
-  text-align: center;
-
-  &:hover {
-    opacity: 0.7;
-    cursor: pointer;
-  }
 
   &.is-default {
-    background-color: $green;
-    font-weight: bold;
-    font-size: 1.25rem;
+    color: $white;
+    padding: .75rem 2rem;
+    border: 1.5px solid $white;
+    border-radius: .25rem;
+
+    &:hover {
+      opacity: .7;
+    }
+  }
+
+  &.is-primary,
+  &.is-secondary {
+    $width: inherit;
+    height: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20%;
+    background-color: $red;
+  }
+
+  &.is-secondary {
+    background-color: $blue;
   }
 }
