refactor/delete scss

--- a/src/client/scss/project/index.scss
+++ b/src/client/scss/project/index.scss
@@ -1,8 +1,1 @@
-@use "p-category";
-@use "p-global-nav";
-@use "p-card";
-@use "p-list";
-@use "p-single-post";
-@use "p-not-found";
-@use "p-head";
-@use "p-body";
+@use "p-top";
